--- a/package.json
+++ b/package.json
@@ -4,23 +4,20 @@
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "browser": "dist/index.umd.js",
+  "types": "dist/index.d.ts",
   "repository": "git@github.com:zeit-ui/prism.git",
   "author": "unix <unix.bio@gmail.com>",
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "now-build": "next build",
-    "build": "rollup -c",
+    "build": "rollup -c && tsc -p ./scripts",
     "release": "yarn build && yarn publish --access public --non-interactive"
   },
   "files": [
     "dist"
   ],
   "devDependencies": {
-    "@zeit-ui/react": "^1.0.0",
-    "next": "^9.3.6",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
@@ -32,6 +29,11 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "@types/styled-jsx": "^2.2.8",
+    "@zeit-ui/react": "^1.3.0",
+    "next": "^9.3.6",
+    "prettier": "^2.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "rehype-join-line": "^1.0.2",
     "rollup": "^2.7.6",
     "rollup-plugin-babel": "^4.4.0",
