--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@zeit-ui/react-prism",
-  "version": "1.0.1",
+  "name": "@geist-ui/react-prism",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "browser": "dist/index.umd.js",
   "types": "dist/index.d.ts",
-  "repository": "git@github.com:zeit-ui/prism.git",
-  "author": "unix <unix.bio@gmail.com>",
+  "repository": "git@github.com:geist-org/react-prism.git",
+  "author": "Geist Org",
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
@@ -29,7 +29,7 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "@types/styled-jsx": "^2.2.8",
-    "@zeit-ui/react": "^1.3.0",
+    "@geist-ui/react": "^2.0.0",
     "next": "^9.3.6",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
