--- a/package.json
+++ b/package.json
@@ -1,44 +1,60 @@
 {
-  "name": "@geist-ui/react-prism",
-  "version": "1.0.1",
+  "name": "@geist-ui/prism",
+  "version": "1.0.1-dev.1",
   "main": "dist/index.js",
-  "module": "dist/index.es.js",
-  "browser": "dist/index.umd.js",
+  "module": "esm/index.es.js",
+  "browser": "dist/index.js",
   "types": "dist/index.d.ts",
-  "repository": "git@github.com:geist-org/react-prism.git",
+  "repository": "git@github.com:geist-org/prism.git",
   "author": "Geist Org",
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "now-build": "next build",
-    "build": "rm -rf ./dist && rollup -c && tsc -p ./scripts",
+    "build:rollup": "rm -rf ./dist && rollup -c && tsc -p ./scripts",
+    "build:babel": "babel --config-file ./scripts/babel.config.js --extensions \".js,.ts,.tsx\" ./packages --out-dir ./esm --ignore \"**/__tests__/**/*,**/*.d.ts\"",
+    "build:after": "node scripts/replace.js",
+    "build": "yarn build:rollup && yarn build:babel && yarn build:after",
     "release": "yarn build && yarn publish --access public --non-interactive"
   },
   "files": [
-    "dist"
+    "dist",
+    "esm",
+    "LICENSE"
   ],
+  "prettier": "@geist-ui/prettier-config",
   "devDependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
-    "@geist-ui/react": "^2.0.0",
+    "@geist-ui/core": "^2.2.5",
+    "@geist-ui/prettier-config": "^1.0.1",
     "@mapbox/rehype-prism": "^0.4.0",
-    "@mdx-js/loader": "^1.6.1",
-    "@next/mdx": "^9.3.6",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@mdx-js/loader": "^1.6.22",
+    "@next/bundle-analyzer": "^12.0.8",
+    "@next/mdx": "^12.0.8",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
     "@types/styled-jsx": "^2.2.8",
-    "next": "^9.5.4",
-    "prettier": "^2.0.5",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-transform-rename-import": "^2.3.0",
+    "next": "^12.0.8",
+    "next-transpile-modules": "^9.0.0",
+    "prettier": "^2.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rehype-join-line": "^1.0.2",
-    "rollup": "^2.7.6",
+    "rollup": "^2.66.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-local-resolve": "^1.0.7",
-    "styled-jsx": "^3.2.5",
-    "typescript": "^3.8.3"
+    "styled-jsx": "4.0.1",
+    "typescript": "^4.5.5"
+  },
+  "peerDependencies": {
+    "@geist-ui/core": ">=2.2.5"
   }
 }
