--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
     "noEmit": true,
     "module": "esnext",
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "incremental": true,
+    "paths": {
+      "lib/*": ["./lib/*"]
+    }
   },
   "exclude": [
     "node_modules",
