--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geist-ui/prism",
-  "version": "1.0.1-dev.1",
+  "version": "1.1.0",
   "main": "dist/index.js",
   "module": "esm/index.es.js",
   "browser": "dist/index.js",
