--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geist-ui/prism",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "main": "dist/index.js",
   "module": "esm/index.es.js",
   "browser": "dist/index.js",
@@ -12,7 +12,7 @@
     "dev": "next dev",
     "now-build": "next build",
     "build:rollup": "rm -rf ./dist && rollup -c && tsc -p ./scripts",
-    "build:babel": "babel --config-file ./scripts/babel.config.js --extensions \".js,.ts,.tsx\" ./packages --out-dir ./esm --ignore \"**/__tests__/**/*,**/*.d.ts\"",
+    "build:babel": "babel --no-babelrc --config-file ./scripts/babel.config.js --extensions \".js,.ts,.tsx\" ./packages --out-dir ./esm --ignore \"**/__tests__/**/*,**/*.d.ts\"",
     "build:after": "node scripts/replace.js",
     "build": "yarn build:rollup && yarn build:babel && yarn build:after",
     "release": "yarn build && yarn publish --access public --non-interactive"
@@ -24,11 +24,12 @@
   ],
   "prettier": "@geist-ui/prettier-config",
   "devDependencies": {
-    "@babel/cli": "^7.16.8",
+    "@babel/cli": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.16.10",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.9.0",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@babel/runtime": "^7.16.7",
     "@geist-ui/core": "^2.2.5",
     "@geist-ui/prettier-config": "^1.0.1",
     "@mapbox/rehype-prism": "^0.4.0",
@@ -48,7 +49,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rehype-join-line": "^1.0.2",
-    "rollup": "^2.66.0",
+    "rollup": "^2.64.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-local-resolve": "^1.0.7",
     "styled-jsx": "4.0.1",
